namespace Interval.IntervalBound.UpperBound
{
    using System;
    using System.Collections.Generic;

    public struct UpperBound<TPoint>
    {
        int CompareToPoint(
            TPoint point,
            IComparer<TPoint> comparer)
        {
            return 0;
        }
    }
}